# IMEX_SfloW

./: README  README.md  configure  configure.ac  index.html  params.json  template.doxy
EXAMPLES/: shallow_water.inp
MATLAB/: importfile_colima.m  importfile_mac.m  plot_p.m
html/: IMEX__SfloW_8f90.html  IMEX__SfloW_8f90_a80b23a8cfea2702ae5a30733d93bd742_cgraph.map  IMEX__SfloW_8f90_a80b23a8cfea2702ae5a30733d93bd742_cgraph.md5  IMEX__SfloW_8f90_source.html  annotated.html  classcomplexify.html  classconstitutive.html  classconstitutive_a0b272e23604e3f6f6fc247a1b2c2ec9d_icgraph.map  classconstitutive_a0b272e23604e3f6f6fc247a1b2c2ec9d_icgraph.md5  classconstitutive_a220edf860b3d9177472efae25c7cfb73_icgraph.map  classconstitutive_a220edf860b3d9177472efae25c7cfb73_icgraph.md5  classconstitutive_a4ab9b1c126e45596cf981758498241e5_icgraph.map  classconstitutive_a4ab9b1c126e45596cf981758498241e5_icgraph.md5  classconstitutive_a6282862a0a1feb400fa5986586960218_icgraph.map  classconstitutive_a6282862a0a1feb400fa5986586960218_icgraph.md5  classconstitutive_a9dede3f00e6f693b85f5adbb7f2c6cef_icgraph.map  classconstitutive_a9dede3f00e6f693b85f5adbb7f2c6cef_icgraph.md5  classconstitutive_ab1993888b44047339f51767d2dbb0508_icgraph.map  classconstitutive_ab1993888b44047339f51767d2dbb0508_icgraph.md5  classconstitutive_ab7cfb682cd8d7f1d274909a805cce9df_cgraph.map  classconstitutive_ab7cfb682cd8d7f1d274909a805cce9df_cgraph.md5  classes.html  classgeometry.html  (+203 more)
src/: IMEX_SfloW.f90  Makefile.am  Makefile.in  constitutive.f90  geometry.f90  init.f90  inpout.f90  parameters.f90  solver.f90
(+62 files in other folders)
